# Little-Tree-Clock

./: .gitignore  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.en.md  CONTRIBUTING.md  FEATURE_IDS.md  PLUGIN_GUIDE.md  README.en.md  README.md  SECURITY.en.md  SECURITY.md  SUPPORT.en.md  SUPPORT.md  Windows_installer.iss  build.py  little_tree.spec  main.py  pyproject.toml
app/: constants.py  events.py  window.py
app/automation/: __init__.py  engine.py
app/models/: __init__.py  alarm_model.py  automation_model.py  focus_model.py  world_zone.py
app/plugins/: __init__.py  base_plugin.py  plugin_manager.py
app/services/: __init__.py  alarm_service.py  central_control_service.py  clock_service.py  file_type_open_service.py  focus_service.py  i18n_service.py  layout_file_open_service.py  notification_service.py  ntp_service.py  permission_service.py  recommendation_service.py  remote_resource_service.py  ringtone_service.py  settings_service.py  startup_service.py  update_service.py  url_scheme_service.py  world_zone_service.py
app/utils/: __init__.py  breadcrumb_animation.py  config_schema.py  datetime_utils.py  fs.py  logger.py  lunar_utils.py  performance.py  scroll_utils.py  security.py  string_utils.py  time_utils.py  validators.py
app/views/: __init__.py  about_view.py  alarm_alert.py  alarm_view.py  (+28 more)
config/: alarms.json  automation.json  central_control.json  focus.json  i18n.json  ntp.json  permission.json  recommendations.json  settings.json  timers.json  update.json  widget_layouts.json  world_time.json
rthooks/: pyi_rthook_pip_distlib.py
(+70 files in other folders)
